Demo: Generate Component MetaData

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "highlight.js": "^9.10.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -135,5 +136,10 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "chokidar": "^3.5.3",
+    "npm-run-all": "^4.1.5",
+    "react-docgen": "^5.4.3"
   }
 }
